<resources>
    <string name="add_assessment">add new assessment</string>
    <string name="add_course">add new course</string>
    <string name="add_sample_data">Add Sample Data</string>
    <string name="add_term">add new term</string>
    <string name="app_name">Student Progress Tracker</string>
    <string name="app_title">Student Progress Tracker</string>
    <string name="assessment_end_date_label">Assessment End Date:</string>
    <string name="assessment_start_date_label">Assessment Start Date:</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="assessment_title_label">Assessment Title:</string>
    <string name="assessment_type">assessment type</string>
    <string name="assessment_type_label">Assessment Type:</string>
    <string name="assessments_label">Assessments:</string>
    <string name="blank">-blank-</string>
    <string name="button_text_assessments">assessments</string>
    <string name="button_text_courses">courses</string>
    <string name="button_text_terms">terms</string>
    <string name="cancel">Cancel</string>
    <string name="channel_description">Date notifications for Student Progress Tracker app.</string>
    <string name="channel_name">StudentProgressTrackerChannel</string>
    <string name="course_end_date_label">Course End Date:</string>
    <string name="course_notes_label">Course Notes:</string>
    <string name="course_start_date_label">Course Start Date:</string>
    <string name="course_status">course status</string>
    <string name="course_status_label">Course Status:</string>
    <string name="course_title">Course Title</string>
    <string name="course_title_label">Course Title:</string>
    <string name="courses_label">Courses:</string>
    <string name="delete">Delete</string>
    <string name="email_address_label">Email Address:</string>
    <string name="email_example">example@domain.com</string>
    <string name="end_date">End Date</string>
    <string name="first_name">First Name</string>
    <string name="first_name_label">First Name:</string>
    <string name="get_started_instructions">Choose from the options below to get started.</string>
    <string name="instructor_information_label">Instructor Information:</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_label">Last Name:</string>
    <string name="no_data">No data</string>
    <string name="notes">Notes</string>
    <string name="phone_number_label">Phone Number:</string>
    <string name="phone_number_placeholder">123–456–7890</string>
    <string name="save">Save</string>
    <string name="share_notes">Share Notes</string>
    <string name="start_date">Start Date</string>
    <string name="term_end_date_label">Term End Date:</string>
    <string name="term_start_date_label">Term Start Date:</string>
    <string name="term_title">Term Title</string>
    <string name="term_title_label">Term Title:</string>
    <string name="textview">TextView</string>
    <string name="welcome_message">Welcome to the Student Progress Tracker!</string>
    <string name="starts_label">Starts:</string>
    <string name="ends_label">Ends:</string>
    <string name="type_label">Type:</string>
    <string name="delete_all_courses">Delete All Courses</string>
    <string-array name="assessment_types">
        <item>Objective</item>
        <item>Performance</item>
    </string-array>
    <string-array name="course_status">
        <item>In progress</item>
        <item>Completed</item>
        <item>Plan to take</item>
        <item>Dropped</item>
    </string-array>
</resources>