<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CourseDetails">

    <ScrollView
        android:id="@+id/courseScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/courseTitleLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseTitleLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_title_label"
                    android:textSize="16sp"
                    android:minWidth="48dp"/>

                <EditText
                    android:id="@+id/courseEditTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="51dp"
                    android:hint="@string/course_title"
                    android:textColorHint="@color/light_grey"
                    android:minWidth="48dp"
                    android:autofillHints="text"
                    android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/courseStatusLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseStatusLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_status_label"
                    android:textSize="16sp" />

                <!--                <EditText-->
                <!--                    android:id="@+id/courseEditStatus"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="48dp"-->
                <!--                    android:layout_marginStart="36dp"-->
                <!--                    android:layout_weight="1"-->
                <!--                    android:hint="in progress" />-->

                <Spinner
                    android:id="@+id/courseStatusSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="36dp"
                    android:contentDescription="@string/course_status" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/courseStartDateLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseStartDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_start_date_label"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/courseEditStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/start_date"
                    android:textColorHint="@color/light_grey"
                    android:minWidth="48dp"
                    android:autofillHints="date"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/courseEndDateLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseEndDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_end_date_label"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/courseEditEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="18dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/end_date"
                    android:textColorHint="@color/light_grey"
                    android:minWidth="48dp"
                    android:autofillHints="date"
                    android:inputType="date" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/instructor_information_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/courseInstructorFirstNameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseInstructorFirstNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name_label"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/courseEditInstructorFirstName"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="58dp"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    android:textColorHint="@color/light_grey"
                    android:minWidth="48dp"
                    android:autofillHints="personGivenName"
                    android:inputType="textPersonName"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/courseInstructorLastNameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseInstructorLastNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name_label"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/courseEditInstructorLastName"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="58dp"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    android:textColorHint="@color/light_grey"
                    android:minWidth="48dp"
                    android:autofillHints="personFamilyName"
                    android:inputType="textPersonName"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/courseInstructorPhoneLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseInstructorPhoneLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number_label"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/courseEditInstructorPhone"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:hint="@string/phone_number_placeholder"
                    android:textColorHint="@color/light_grey"
                    android:minWidth="48dp"
                    android:autofillHints="phone number"
                    android:inputType="phone"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/courseInstructorEmailLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseInstructorEmailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address_label"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/courseEditInstructorEmail"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="34dp"
                    android:layout_weight="1"
                    android:hint="@string/email_example"
                    android:textColorHint="@color/light_grey"
                    android:minWidth="48dp"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"/>

            </LinearLayout>

            <TextView
                android:id="@+id/courseNotesLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/course_notes_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/courseEditNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/notes"
                android:textColorHint="@color/light_grey"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:importantForAutofill="no" />

            <!-- Hardcoded right gravity to make it easier for right handed users to reach the Save button -->
            <LinearLayout
                android:id="@+id/courseButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:gravity="right"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <LinearLayout
                    android:id="@+id/courseDeleteButtonLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                </LinearLayout>

                <Button
                    android:id="@+id/courseSaveDetailsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/save" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/courseDetailsAssessmentsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/assessments_label"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/course_assessmentRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/courseDetailsFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/add_term"
        android:src="@drawable/ic_add_48"
        android:tint="@color/white"
        app:backgroundTint="@color/steel_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="36dp"
        app:rippleColor="@color/teal_700" />

</androidx.constraintlayout.widget.ConstraintLayout>